--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Objects</title>
+		<link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
 	</head>
 	<body>
 		<div id="blog"></div>
